Fix font sizes on smaller screens for index

--- a/static/scss/welcome.scss
+++ b/static/scss/welcome.scss
@@ -57,8 +57,8 @@ header {
 		max-width: 600px;
 		h2 {
 			color: $color_1;
-			font-size: 4em;
-			font-weight: 500px;
+			font-size: 2em;
+			font-weight: 500;
 			span {
 				color: $color_2;
 				font-size: 1.2em;
